# opencv-ios

./: CMakeLists.txt  README.md
include/opencv2/: cvconfig.h
